fix style collapse

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -43,7 +43,7 @@ $animation-duration: 0.5s;
       margin: 0;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: center;
 
       font-size: 18px;
       font-weight: 700;
@@ -60,8 +60,12 @@ $animation-duration: 0.5s;
       cursor: pointer;
     }
 
-    &.open {
-      @include arrowRotation(-180deg);
+    &__arrow {
+      transform: rotate(0);
+      transition: all $animation-duration;
+      &.open {
+        @include arrowRotation(-180deg);
+      }
     }
   }
 
